tests/Compilation/negative/test002.juvix
-- pattern matching coverage in cases
module test002;

import Stdlib.Prelude open;

f (x : List Nat) : Nat :=
  case x
    | nil := 0
    | x :: y :: _ := x + y;

main : Nat := f (1 :: 2 :: nil);
